--- a/tests/main/interfaces-timeserver-control/task.yaml
+++ b/tests/main/interfaces-timeserver-control/task.yaml
@@ -5,29 +5,20 @@ details: |
     can access timeserver information and update it.
 
 prepare: |
-    # Install the snap to check file system access
-    cp $TESTSLIB/snaps/test-snapd-check-fs-access/meta/snap.yaml $TESTSLIB/snaps/test-snapd-check-fs-access/meta/snap.yaml.orig
-    sed 's/\[\]/\[timeserver-control\]/g' -i $TESTSLIB/snaps/test-snapd-check-fs-access/meta/snap.yaml
-    snap try $TESTSLIB/snaps/test-snapd-check-fs-access
-
     # Install a snap declaring a plug on timeserver-control
     cp $TESTSLIB/snaps/test-snapd-timedate-control-consumer/meta/snap.yaml $TESTSLIB/snaps/test-snapd-timedate-control-consumer/meta/snap.yaml.orig
     sed 's/\[\]/\[timeserver-control\]/g' -i $TESTSLIB/snaps/test-snapd-timedate-control-consumer/meta/snap.yaml
     snap try $TESTSLIB/snaps/test-snapd-timedate-control-consumer
 
-    # Save the default timeserver to be restored at the end
-    echo $(timedatectl status | grep 'Network time on:' | sed 's/.*Network time on: \(.*\)$/\1/') > timeserver.txt
-
 restore: |
-    # Restore the check-fs-access snap.yaml
-    cp $TESTSLIB/snaps/test-snapd-check-fs-access/meta/snap.yaml.orig $TESTSLIB/snaps/test-snapd-check-fs-access/meta/snap.yaml
-
     # Restore the timedate-control-consumer snap.yaml
     cp $TESTSLIB/snaps/test-snapd-timedate-control-consumer/meta/snap.yaml.orig $TESTSLIB/snaps/test-snapd-timedate-control-consumer/meta/snap.yaml
 
     # Restore the initial timeserver
-    timedatectl set-ntp "$(cat timeserver.txt)"
-    rm -f timeserver.txt
+    if [ -f timeserver.txt ]; then
+        timedatectl set-ntp "$(cat timeserver.txt)"
+        rm -f timeserver.txt
+    fi
 
 execute: |
     CONNECTED_PATTERN=":timeserver-control +test-snapd-timedate-control-consumer"
@@ -41,19 +32,16 @@ execute: |
     # Connect the interfaces for both snaps
     snap connect test-snapd-timedate-control-consumer:timeserver-control
     snap interfaces | MATCH "$CONNECTED_PATTERN"
-    snap connect test-snapd-check-fs-access:timeserver-control
 
-    # Read access to /usr/share/zoneinfo should be possible
-    # Write access Won't work until LP: #1504657 is fixed. Requires reboot until timesyncd notices the change or systemd restarts it.
-    test-snapd-check-fs-access.read-file /etc/systemd/timesyncd.conf
+    # Save the default timeserver to be restored at the end
+    echo $(test-snapd-timedate-control-consumer.timedatectl status | grep 'Network time on:' | sed 's/.*Network time on: \(.*\)$/\1/') > timeserver.txt
 
     # Set the ntp value and check the status
     test-snapd-timedate-control-consumer.timedatectl set-ntp yes
-    [ "$(timedatectl status | grep 'Network time on:' | sed 's/.*Network time on: \(.*\)$/\1/')" = "yes" ]
+    [ "$(test-snapd-timedate-control-consumer.timedatectl status | grep 'Network time on:' | sed 's/.*Network time on: \(.*\)$/\1/')" = "yes" ]
 
     # Set the ntp value and check the status
     test-snapd-timedate-control-consumer.timedatectl set-ntp no
-    [ "$(timedatectl status | grep 'Network time on:' | sed 's/.*Network time on: \(.*\)$/\1/')" = "no" ]
     [ "$(test-snapd-timedate-control-consumer.timedatectl status | grep 'Network time on:' | sed 's/.*Network time on: \(.*\)$/\1/')" = "no" ]
 
     if [ "$(snap debug confinement)" = partial ] ; then
